# actix-graphql-prisma-mysql

./: .env.example  .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230315081039_init/: migration.sql
src/: main.rs
src/graphql/: types.rs
src/graphql/mutation/: mod.rs  post.rs  user.rs
src/graphql/query/: mod.rs  post.rs  user.rs
