[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma-cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5" }
actix-web = "4"
serde = { version = "1.0.156", features = ["derive"] }
dotenv = "0.15.0"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
